--- a/MySite/MySite/Views/Home/Index.cshtml
+++ b/MySite/MySite/Views/Home/Index.cshtml
@@ -10,22 +10,20 @@
     <title>Index</title>
 </head>
 <body>
-    <div class="top-part-container"> 
+   <div class="all-content-div">
+       <div class="left-bar">
+           @Html.ActionLink("Home", "Index",null,new { @class="left-bar-element"})<br>
+           @Html.ActionLink("About me", "Index",null, new { @class = "left-bar-element" })<br>
+           @Html.ActionLink("What i use", "Index", null,new { @class = "left-bar-element" })<br>
+           @Html.ActionLink("My contacts", "Index", null, new { @class = "left-bar-element" })<br>
+           </div>
+       </div>
+    
 
-    </div>
-
-    <div class="bottom-content-block">
-
-        Here information about me
-
-        Шаблон MVC используется в качестве архитектурной основы во многих фреймворках и CMS, которые создавались для того, чтобы иметь возможность разрабатывать качественно более сложные решения за более короткий срок. Это стало возможным благодаря повышению уровня абстракции, поскольку есть предел сложности конструкций, которыми может оперировать человеческий мозг.
-
-        Но, использование веб-фреймворков, типа Yii или Kohana, состоящих из нескольких сотен файлов, при разработке простых веб-приложений (например, сайтов-визиткок) не всегда целесообразно. Теперь мы умеем создавать красивую MVC модель, чтобы не перемешивать Php, Html, CSS и JavaScript код в одном файле.
-
-        Данная статья является скорее отправной точкой для изучения CMF, чем примером чего-то истинно правильного, что можно взять за основу своего веб-приложения. Возможно она даже вдохновила Вас и вы уже подумываете написать свой микрофреймворк или CMS, основанные на MVC. Но, прежде чем изобретать очередной велосипед с «блекджеком и шлюхами», еще раз подумайте, может ваши усилия разумнее направить на развитие и в помощь сообществу уже существующего проекта?!
-
-        </div>
-
+    <hr/>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - My site</p>
+        </footer>
   
     @Styles.Render("~/Content/OwnStyles")
 </body>
